--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Water Control</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="graph.html">Graph</a></li>
+        <li><a href="config.html">Config</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
         <li><a href="graph.html">Graph</a></li>
