--- a/app/config.html
+++ b/app/config.html
@@ -11,11 +11,48 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href='css/metricsgraphics.css' rel='stylesheet' type='text/css'>
   <script type="text/javascript">
-  var globals = {};
+	window.fbAsyncInit = function() {
+	  FB.init({
+		appId      : '212617012591381',
+		cookie     : true,  // enable cookies to allow the server to access 
+							// the session
+		xfbml      : true,  // parse social plugins on this page
+		version    : 'v2.8' // use graph api version 2.8
+	  });
+
+	  FB.getLoginStatus(function(response) {
+		statusChangeCallback(response);
+	  });
+	};
+
+	(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+
+	function statusChangeCallback(response) {
+		console.log(response);
+		if (response.status === 'connected') {
+		  // Noop
+		} else {
+		  // redirect..
+			window.location.replace("http://data.kreutzer.no");
+		}
+	}
+
+	function checkLoginState() {
+		FB.getLoginStatus(function(response) {
+		  statusChangeCallback(response);
+		});
+	}  
+  var globals = {}
 	 function WebSocketInit() {
 		if ("WebSocket" in window) {
 		   // Let us open a web socket
-		   globals.ws = new WebSocket("ws://localhost:8088/dataserver-0.1/websocket");
+		   globals.ws = new WebSocket("ws://data.kreutzer.no/dataserver/websocket");
 			
 		   globals.ws.onopen = function() {
 		   };
