--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,18 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
+<script src="js/FBlogin.js"></script>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Water Control</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="graph.html">Graph</a></li>
-        <li><a href="config.html">Config</a></li>
+        <li id="mnu_config1" style="display: none"><a href="config.html">Config</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
         <li><a href="graph.html">Graph</a></li>
+        <li id="mnu_config2" style="display: none"><a href="config.html">Config</a></li>
       </ul>	
-	  <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>	  
+	  <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
@@ -105,8 +107,17 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by AJ
-      </div>
+		<div class="row">
+			<div class="col s6">	  
+				Made by AJ
+			</div>
+			<div class="col s6" id="fb-login" style="display: none">	  
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+				</fb:login-button>
+			</div>
+			<div class="col s6" id="login_name" style="display: none">	  
+			</div>
+		</div>
     </div>
   </footer>
 
