--- a/app/graph.html
+++ b/app/graph.html
@@ -128,6 +128,8 @@
 				height: 200,
 				right: 40,
 				markers: globals.data,
+				min_y_from_data: true,
+				xax_count: 4,
 				linked: true,
 				format: 'percentage',
 				target: '#levelgraph'
@@ -147,6 +149,7 @@
 				width: graphWidth,
 				height: 200,
 				right: 40,
+				xax_count: 4,
 				linked: true,
 				area: false,
 				//y_label: 'litres/min',
