--- a/app/config.html
+++ b/app/config.html
@@ -61,6 +61,7 @@
 			  if (evt.data == "WHOAREYOU") {
 				globals.ws.send("GUI"); // register as gui client
 				globals.ws.send("getConfig");
+				globals.ws.send("getState");
 			  } else if (evt.data != "ACK") {
 				var msg = evt.data+"<br/>"; 
 				try {
@@ -72,6 +73,19 @@
 						document.getElementById(fillMode.toLowerCase()).checked = true;
 						fullMode = obj.config.fullMode;
 						document.getElementById(fullMode.toLowerCase()).checked = true;
+					} else if ('state' in obj){
+						document.getElementById("ws_msg").innerHTML += "State received.<br/>"
+						if (obj.state.pump == "ON") {
+							document.getElementById("pump").checked = true;
+						} else {
+							document.getElementById("pump").checked = false;
+						}
+						if (obj.state.valve == "OPEN") {
+							document.getElementById("valve").checked = true;
+						} else {
+							document.getElementById("valve").checked = false;
+						}
+					// document.getElementById("ws_msg").innerHTML += msg;
 					}
 				} catch(e) { // in case parse fails, not JSON 
 					document.getElementById("ws_msg").innerHTML += msg;
@@ -176,7 +190,7 @@
           <div class="card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title">Manuell styring</span>
-              <p>Styring av aktuatorer på en manuell måte.</p>
+              <p>Overstyrer pumpe og ventil. Vær forsiktig med å bruke disse.</p>
             </div>
             <div class="card-action">
 				<div class="section white-text">
