--- a/app/config.html
+++ b/app/config.html
@@ -114,18 +114,19 @@
             </div>
 			<!-- TODO: sett opp i tabell med liter under og liter per sekund -->
             <div class="card-action white-text">
-				<div class="col s2 m2">
+				<div class="col s2">
 				  <input type="checkbox" class="filled-in" id="live-data"  onchange="onLiveChange(this)"/>
 				  <label for="live-data"><div class="hide-on-med-and-down">Live</div></label>
 				</div>
-				<div class="col s2 m3">
+				<div class="col s2">
 					Totalt: 
 				</div>
-				<div class="col s2 m3" id="totalCount">-</div>
-				<div class="col s2 m2">
+				<div class="col s2" id="totalCount">-</div>
+				<br/>
+				<div class="col s2">
 					Flyt: 
 				</div>
-				<div class="col s2 m2" id="currentCount">-</div>
+				<div class="col s2" id="currentCount">-</div>
 				<br/>
 				<p>Totalen måles i antall pulser, mens flyt måles i antall pulser per sekund.</p>
             </div>
