--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <div class="container">
       <br><br>
       <h1 id="status" class="header center orange-text">FULL</h1>
+	  <h2 id="level" class="center">98%</h5>
     </div>
 
       <br><br>
@@ -76,23 +77,7 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m3">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">opacity</i></h2>
-            <h5 id="level" class="center">98%</h5>
-            <p class="center light">Current water level</p>
-          </div>
-        </div>
-<!--
-        <div class="col s12 m3">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">input</i></h2>
-            <h5 id="flow" class="center">42 l/h</h5>
-            <p class="center light">Current water flow</p>
-          </div>
-        </div>
--->		
-       <div class="col s12 m3">
+       <div class="col s4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">play_for_work</i></h2>
             <h5 id="switch" class="center">OPEN</h5>
@@ -100,7 +85,7 @@
           </div>
         </div>
 		
-        <div class="col s12 m3">
+        <div class="col s4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">local_gas_station</i></h2>
             <h5 id="pump" class="center">ON</h5>
@@ -108,7 +93,7 @@
           </div>
         </div>
 		
-        <div class="col s12 m3">
+        <div class="col s4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">local_drink</i></h2>
             <h5 id="valve" class="center">OPEN</h5>
@@ -117,10 +102,7 @@
         </div>
 		
        </div>
-
     </div>
-    <br><br>
-
     <div class="section">
 
     </div>
