--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Water Control</title>
-
+  <title>WaterControl</title>
+  <link rel="manifest" href="/manifest.json"/>
+  
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -49,7 +50,7 @@
 <body>
 <script src="js/FBlogin.js"></script>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Water Control</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">WaterControl</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="graph.html">Graph</a></li>
         <li id="mnu_config1" style="display: none"><a href="config.html">Config</a></li>
