--- a/app/graph.html
+++ b/app/graph.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Water Control</title>
+  <title>WaterControl</title>
+  <link rel="manifest" href="/manifest.json"/>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +14,7 @@
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Water Control</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">WaterControl</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
       </ul>
