--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,16 @@
 	</script>
 </head>
 <body>
+  <!-- div class="fixed-action-btn horizontal click-to-toggle">
+    <a class="btn-floating btn-large blue">
+      <i class="large material-icons">settings</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red" href="graph.html"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating green darken-1"><i class="material-icons">settings</i></a></li>
+    </ul>
+  </div -->
+  
 <script src="js/FBlogin.js"></script>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">WaterControl</a>
