--- a/app/graph.html
+++ b/app/graph.html
@@ -38,13 +38,13 @@
     <div class="container">
 	   <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-				<span class="card-title">Tanknivå over tid</span>
+				<span class="card-title">Tanknivå over tid [%]</span>
 				<div class="row center" id='levelgraph'></div>
             </div>	   
 	  </div>
 	   <div class="card blue-grey darken-1">
             <div class="card-content white-text">
-				<span class="card-title">Vannstrøm over tid</span>
+				<span class="card-title">Vannstrøm over tid [l/m]</span>
 				<div class="row center" id='flowgraph'></div>
             </div>	   
 	  </div>
@@ -67,8 +67,15 @@
 			<a class="waves-effect waves-light btn" onclick="updateGraphs()">Oppdater</a>		
 		</div>
       </div>
-      <br><br>
-    </div>
+      <div class="row right">
+		  <div class="col s12">
+			<a class="btn-floating btn-large waves-effect waves-light blue" onclick="setGraphInterval(1)">1t</a>
+			<a class="btn-floating btn-large waves-effect waves-light blue" onclick="setGraphInterval(6)">6t</a>
+			<a class="btn-floating btn-large waves-effect waves-light blue" onclick="setGraphInterval(12)">12t</a>
+		  </div>	
+	  </div>
+	  <br/><br/>
+   </div>
   </div>
 
 
